unpackaged/main/default/objects/User/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Last Modified Date</description>
    <formula>TEXT( $Profile.LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date</label>
    <type>Text</type>
</CustomField>