unpackaged/main/default/objects/User/fields/Mailing_Address_Street2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street2__c</fullName>
    <label>Mailing Address Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>