unpackaged/main/default/objects/User/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes regarding user</description>
    <inlineHelpText>Notes regarding user</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>