unpackaged/main/default/objects/User/fields/PrimaryStreet_1__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStreet_1__c</fullName>
    <description>Street field from composite address field</description>
    <label>PrimaryStreet_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>