unpackaged/main/default/objects/User/fields/sked_Collection_Operations__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operations__c</fullName>
    <label>Collection Operations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Collection_Operations</valueSetName>
    </valueSet>
</CustomField>