unpackaged/main/default/objects/User/fields/UFID_AN__c.field-meta.xml
<CustomField>
    <fullName>UFID_AN__c</fullName>
    <label>UFID AN</label>
    <type>AutoNumber</type>
</CustomField>