unpackaged/main/default/objects/User/validationRules/EmployeeNumber_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeNumber_cannot_be_changed</fullName>
    <active>true</active>
    <description>List of fields that user cannot change, only sysadmin should be able to change these.</description>
    <errorConditionFormula>AND(
$Profile.Name != &#39;System Administrator&#39;,
ISCHANGED(EmployeeNumber)

)</errorConditionFormula>
    <errorDisplayField>EmployeeNumber</errorDisplayField>
    <errorMessage>You are not authorized to change the field value</errorMessage>
</ValidationRule>