unpackaged/main/default/objects/User/listViews/All_Users_JLC.listView-meta.xml
<ListView>
    <fullName>All_Users_JLC</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <label>All Users_JLC</label>
    <language>en_US</language>
</ListView>