unpackaged/main/default/objects/User/listViews/Copy_of_Active_Users.listView-meta.xml
<ListView>
    <fullName>Copy_of_Active_Users</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <label>Copy of Active Users</label>
</ListView>