unpackaged/main/default/objects/User/listViews/Users_DRD_Profile.listView-meta.xml
<ListView>
    <fullName>Users_DRD_Profile</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>DRD</value>
    </filters>
    <label>Users - DRD Profile</label>
    <language>en_US</language>
</ListView>