unpackaged/main/default/objects/User/listViews/Users_Manufacturing_Profile.listView-meta.xml
<ListView>
    <fullName>Users_Manufacturing_Profile</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Manufacturing</value>
    </filters>
    <label>Users - Manufacturing Profile</label>
    <language>en_US</language>
</ListView>